--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 
-MONGODB_URI=mongodb+srv://elsaidalia08:elsaidalia0008@cluster0.hbv3wws.mongodb.net/
+MONGODB_URI=mongodb+srv://elsaidalia08:VCHKvuoYzkFECC4e@cluster0.7ipv0wu.mongodb.net/
 PORT=8080
 JWT_SECRET=votre_clé_secrète_jwt_sécurisée
 FRONTEND_URL=http://localhost:5173
